deployment-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
      environment: development
  template:
    metadata:
      labels:
        app: frontend
        environment: development
    spec:
      containers:
      - name: nginx
        image: nginx
