nginx-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-dev
  labels:
    env: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
      env: dev
  template:
    metadata:
      labels:
        app: nginx
        env: dev
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
