nginx-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-prod
  labels:
    env: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
      env: prod
  template:
    metadata:
      labels:
        app: nginx
        env: prod
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
