pod-mysql.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-db
spec:
  containers:
  - image: mysql:5.7
    name: mysql
    ports:
    - containerPort: 3306
      name: mysql
    volumeMounts:
    - name: mysql-persistent-storage
      mountPath: /var/lib/mysql
  volumes:
  - name: mysql-persistent-storage
    persistentVolumeClaim:
      claimName: mysql-pvc
